deployment/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-github-app
spec:
  replicas: 9
    spec:
      containers:
      - name: frontend
