deployment/overlays/prod/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend  
  annotations:
    kubernetes.io/ingress.global-static-ip-name: label-bot-prod
    networking.gke.io/managed-certificates: certificate
